style.css
/* ... */
.entry-meta a {
	border-bottom: 1px solid #CACCD1;
}

.entry-meta a:hover, .entry-meta a:focus {
	border-bottom: 1px solid #00B2E2;
}

.tags-links, .cat-links {
	font-weight: 500;
	font-size: 0.8em;
}

.entry-meta-other {
	font-size: 0.7em;
	color: #838994;
}

.entry-recommendations {
	background: #eaebec;
  position: relative;
  left: calc(-50vw + 300px);
  width: 100vw;
	padding-top: 2em;
  padding-bottom: 0.5em;
}

.entry-recommendations-content {
	padding-left: 1em;
	padding-right: 1em;
	columns: 2;
}

@media screen and (max-width: 767px) {

	.entry-recommendations {
		left: -1em;
		height: 610px;
		overflow: hidden;
	}

	.entry-recommendations-content {
		columns: 1;
	}

}

.entry-recommendations article {
	break-inside: avoid;
	page-break-inside: avoid;
	height: 160px;
}

@media screen and (max-width: 767px) {

	.entry-recommendations article {
		height: 130px;
	}

}

.entry-recommendations-content p {
	margin: 0;
}

nav .nav-links {
	font-family: "Roboto", sans-serif;
	font-weight: 500;
	text-transform: uppercase;
  font-size: 0.8em;
}

/*--------------------------------------------------------------
## Form Elements
--------------------------------------------------------------*/
.site .wp-block-button__link {
	background: #00B2E2;
	font-family: "Roboto", sans-serif;
}

.site .wp-block-button__link:hover,
.site .wp-block-button__link:focus,
.site .wp-block-button__link:active {
	background: #007EA0;
	border: 0;
}

form.search-form .search-field,
form.subscribe-form .subscribe-field {
	width: 20em;
	height: 40px;
	border-radius: 28px 0 0 28px;
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	padding-left: 1em;
	padding-right: 0.5em;
	font-family: "Roboto", sans-serif;
	font-size: 17px;
	border: 1px solid #CACCD1;
	-webkit-appearance: none;
}

@media screen and (max-width: 767px) {
	form.search-form .search-field {
		width: calc(100% - 70px);
	}
	form.subscribe-form .subscribe-field {
		width: calc(100% - 88px);
	}
}

.search-form .search-field:focus,
.subscribe-form .subscribe-field:focus {
	outline: 0;
}

.search-form .search-submit,
.subscribe-form .subscribe-submit {
	font-family: "Roboto", sans-serif;
	background: #00B2E2;
	color: #FFF;
	height: 40px;
	margin-left: -6px;
	border: 0;
	border-radius: 0 28px 28px 0;
}

.search-form .search-submit:active,
.subscribe-form .subscribe-submit:active,
.search-form .search-submit:focus,
.subscribe-form .subscribe-submit:focus,
.search-form .search-submit:hover,
.subscribe-form .subscribe-submit:hover {
	background: #007EA0;
	outline: 0;
}

/*--------------------------------------------------------------
## Search
--------------------------------------------------------------*/
.search .content-area {
	margin-top: 3em;
}

@media screen and (max-width: 767px) {
	.search .content-area {
		margin-top: 1.5em;
	}
}

.search article,
.archive article {
	margin-bottom: 1em;
	border-bottom: 1px solid #CACCD1;
}

.search article h3.entry-subtitle,
.archive article h3.entry-subtitle {
	font-family: 'Roboto', sans-serif;
	font-size: 0.7em;
	font-weight: 400;
	line-height: 1.35em;
	margin: 0 0 0.1em;
	color: #F9461C;
}

.search article h2.entry-title,
.archive article h2.entry-title {
	font-size: 1em;
	font-weight: 600;
	line-height: 1.25;
	margin: 0 0 .7em;
}

.search article .entry-summary,
.archive article .entry-summary {
	font-size: 0.8em;
	line-height: 1.4;
	margin-bottom: 1em;
}

.search a:hover article .entry-summary,
.archive a:hover article .entry-summary {
	color: #0E2F3C;
}

